# riptide_autonomy

./: .gitignore  CMakeLists.txt  README.md  base_tree.xml  big_align_state.py  big_cutie_tree.xml  big_flatten_tree.xml  big_gate_tree.xml  big_move_tree.xml  btLog.fbl  gate_tree_2.xml  package.xml  search_tree.xml  setup.py
action/: TaskActionListener.action  Trajectory.action  buoyTask.py  decapTask.py  exposeTask.py  garlicTask.py  gateTask.py  goToFinals.py  prequalify.py  search.py  taskActionListener.py  trajectoryManager.cpp
holder/: riptide_move_state.py
holder/MovementTools/: Depth.py  GateManuever.py  Pitch.py  Roll.py  Translate.py
holder/SearchTools/: Align.py  Distance.py
holder/tests/: depth_test.py  yaw_test.py
include/: UWRTLogger.hpp  UwrtBtNode.hpp  autonomy.h  autonomy_lib.hpp  states.h
include/autonomy_test/: BufferedSubscriber.hpp  DummyActionServer.hpp  DummyActionServerWithFeedback.hpp  DummyService.hpp  TimedPublisher.hpp  autonomy_testing.hpp
include/riptide_autonomy/: UWRTLogger.hpp  UwrtBtNode.hpp  autonomy_base.hpp  autonomy_lib.hpp  simple_nodes.hpp
include/riptide_autonomy/bt_actions/: Actuate.btaction.hpp  ActuateClaw.btaction.hpp  ActuateDroppers.btaction.hpp  AlignTorpedos.btaction.hpp  Armer.btaction.hpp  CallSetBoolService.btaction.hpp  CallTriggerService.btaction.hpp  ComputeFrameAlignment.btaction.hpp  FireTorpedos.btaction.hpp  GetActuatorStatus.btaction.hpp  GetBoolTopic.btaction.hpp  GetImuOrientation.btaction.hpp  GetOdometry.btaction.hpp  GetSwitchState.btaction.hpp  PublishEKFPose.btaction.hpp  PublishInt8.btaction.hpp  PublishToController.btaction.hpp  ResetOdom.btaction.hpp  SetControllerSafeMode.btaction.hpp  SetMappingTarget.btaction.hpp  SetStatus.btaction.hpp  SomeNode.btaction.hpp  TransformPose.btaction.hpp  TriggerControllerStunt.btaction.hpp  Wait.btaction.hpp  WaitForDetection.btaction.hpp  getCovariance.btaction.hpp
include/riptide_autonomy/bt_conditions/: ApproxEqualTo.btcondition.hpp  ApproxEqualToAngle.btcondition.hpp  CompareNums.btcondition.hpp  IsTrue.btcondition.hpp
include/riptide_autonomy/bt_decorators/: RetryUntilSuccessfulOrTimeout.btdecorator.hpp
launch/: actions.launch  autonomy.launch.py  barrel_roll_test.launch  buoy_task.launch.py  cutie_task.launch  flatten_test.launch  flatten_test.launch.py  gate_task.launch  gate_task.launch.py  gate_task_2.launch.py  move_test.launch  move_test.launch.py  roll_test.launch  search_test.launch  search_test.launch.py  testposition.launch  torpedo_task.launch.py  torpedo_test.launch  translation_test.launch  yaw_test.launch
launch/old/: depth_test.launch  flatten_test.launch  gate_task_2.launch  pitch_test.launch  relative_orientation.launch  routine.launch  search_test.launch  trajectory_manager.launch
manifest/: bigsearch.xml  depthparameter.xml  gate_task.xml  gatetask.xml  hello_world_demo.xml  move.xml  pitchbehavior.xml  pre_qual_behvaior.xml  prequal.xml  rectangles.xml  rollbehavior.xml  test.xml  test_behavior.xml  translatebehavior.xml  yawbehavior.xml
src/: big_move_state.cpp  runAutonomous.py
src/riptide_autonomy/: ActuateState.cpp  ActuatorStateCheckers.cpp  AlignTorpedoState.cpp  BASE_STATE.cpp  BigMoveState.cpp  BigMoveState.hpp  CheckBT.cpp  CheckBT2.0.cpp  DoTask.cpp  FlattenCalculationState.cpp  FlattenCalculationState.hpp  Gate.py  GetActuatorStatus.cpp  HeadlessInterface.py  LineDriveCalcState.cpp  LineDriveCalcState.hpp  Move.py  README.md  RetryUntilSuccessfulOrTimeout.cpp  Search.py  SearchState.cpp  SearchState.hpp  ShootTorpedoState.cpp  SimpleConditions.cpp  SimpleStates.cpp  StateMachine.py  ToWorldFrameState.cpp  ToWorldFrameState.hpp  UwrtBtNode.cpp  VelocityState.cpp  VelocityState.hpp  WaitState.cpp  big_move_state.cpp  bigsearch_sm.py  depthparameter_sm.py  doTransformTest.cpp  do_task.cpp  flatten.cpp  flatten_calculation_state.cpp  gate_task.cpp  (+22 more)
src/riptide_autonomy/MovementTools/: Depth.py  GateManuever.py  Pitch.py  Roll.py  Translate.py  Yaw.py
src/riptide_autonomy/SearchTools/: Align.py  Distance.py
src/riptide_autonomy/actions/: AlignTorpedoAction.py
src/riptide_autonomy/assistant/: btassistant.py  shellassistant.sh  util.py
src/riptide_autonomy/bt_actions/: AccuateClaw.cpp  Actuate.btaction.cpp  Actuate.cpp  ActuateClaw.cpp  ActuateDroppers.cpp  AlignTorpedos.btaction.cpp  AlignTorpedos.cpp  BASE_STATE.cpp  ComputeFrameAlignment.btaction.cpp  ComputeFrameAlignment.cpp  GetActuatorStatus.btaction.cpp  GetOdometry.btaction.cpp  GetOdometry.cpp  GetSwitchState.btaction.cpp  PublishToController.btaction.cpp  PublishToController.cpp  ResetOdom.btaction.cpp  ResetOdom.cpp  Search.btaction.cpp  Search.cpp  SimpleActions.cpp  SimpleActions.simple.btaction.cpp  SimpleActions.simple.cpp  TransformPose.btaction.cpp  TransformPose.cpp  UWRTSyncActionNode.cpp  Wait.btaction.cpp
src/riptide_autonomy/bt_conditions/: ActuatorConditions.cpp  (+7 more)
states/: Gate.py  Move.py  Search.py
states/MovementTools/: Depth.py  GateManuever.py  Pitch.py  Roll.py  Translate.py  Yaw.py  __init__.py
states/SearchTools/: Align.py  Distance.py
test/riptide_autonomy/: BtTest.cpp  BtTestEnvironment.cpp  BtTestTool.cpp  DummyActionNode.cpp  executeTests.cpp
tests/: barrel_roll_test.py  depth_test.py  pitch_test.py  roll_test.py  search_test.py  translation_test.py  yaw_test.py
trees/: ActuateDroppers.xml  ActuatorTrees.xml  AsyncTree.xml  BinTree.xml  BuoyTree.xml  CompTree.xml  DemoFlipTree.xml  DemoTree.xml  DownwardMove.xml  DownwardSearch.xml  DropperTree.xml  GBSearch.xml  GBSearch_vision_start.xml  GateBuoyTree.xml  GateOcto.xml  GateTree.xml  GoForwardTree.xml  MoveTree.xml  PreQual.xml  PreQualTree.xml  RunWithTorpedos.xml  RunWithTorpedos2.xml  SearchTree.xml  ServiceTests.xml  StartupKillWaitTree.xml  SurfaceTree.xml  SurveyTree.xml  TestTree.xml  TorpedoAlignTree.xml  TorpedoTree.xml  ZeroTree.xml  base_tree.xml  big_cutie_tree.xml  big_flatten_tree.xml  big_gate_tree.xml  big_move_tree.xml  gate_tree_2.xml  killswitchwaittreetest.xml  port_test.xml  qual.xml  (+7 more)
trees/.groot/: workspace.xml  workspace_with_search.xml
(+72 files in other folders)
