<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_autonomy2</name>
  <version>0.0.0</version>
  <description>Package that contains all autonomous code that the robot runs</description>
  <maintainer email="knutson.39@buckeyemail.osu.edu">Brach Knutson</maintainer>
  <license>TODO: License declaration</license>
  <author>Brach Knutson</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>riptide_msgs2</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>ament_index_cpp</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>